--- a/WebContent/UI.jspx
+++ b/WebContent/UI.jspx
@@ -15,38 +15,50 @@
 <link rel="StyleSheet"
 	href="${pageContext.request.contextPath}/res/mc.css" type="text/css"
 	title="cse4413" media="screen, print" />
-	
+
 <script type="text/javascript" src="${pageContext.request.contextPath}/res/mc.js">;</script>
+	
 </head>
 
 <body>
 
 	<FIELDSET>
-		<form action="Osap" method="POST" class="osapForm" onsubmit="return validate();">
+		<form  action="Osap" method="POST" class="osapForm" onsubmit="return validate();">
 				<legend> ${APPNAME} </legend><BR /><BR />
 				
 				<label  class="error"> ${errorMessage} </label><BR />
 				
-				<label for="principal"> Principal <SPAN id="principal-error" style="display: none">*</SPAN> <BR /> <small>(total loan amount after studies)</small></label> 
+				<label for="principal"> Principal 
+				<SPAN id="principal-error" style="display: none">*</SPAN> <BR /> 
+				<small>(total loan amount after studies)</small></label> 
+				
 				<input type="number" step="0.01" id="principal" name="principal"></input> <br/>
 				
-				<label for="interest"> Annual Interest <SPAN id="interest-error" style="display: none">*</SPAN> </label> 
+				<label for="interest"> Annual Interest 
+				<SPAN id="interest-error" style="display: none">*</SPAN> </label> 
+				
 				<input type="number" step="0.01" id="interest" name="interest"></input> <br/>
 				
-				<label for="period"> Payment Period <SPAN id="period-error" style="display: none">*</SPAN> <BR /> <small>(total number of months)</small></label> 
+				<label for="period"> Payment Period 
+				<SPAN id="period-error" style="display: none">*</SPAN> <BR /> 
+				<small>(total number of months)</small></label> 
+				
 				<input type="number" step="0.01" id="period" name="period"></input> <br/>
 				
-				<label for="grace"> Grace Period <BR /> <small>(Take advantage of 6 month grace period and include grace period interest with your loan balance)</small></label> 
-				<input type="checkbox" name="inputGrace"></input><br/>
+				<label for="grace"> Grace Period <BR /> 
+				<small>(Take advantage of 6 month grace period and include grace period interest with your loan balance)</small></label> 
+				
+				<input type="checkbox" id="inputGrace" name="inputGrace"></input><br/>
 				
 				<button action="submit" name="calculate" value="true">Submit</button>
+				
 				<button name="ajax" value="true"
 						onclick="validate(); doSimpleAjax('/OsapCalc-v4/Osap/Ajax/');return false;">
-						Submit (Ajax)</button>
+						Submit (Ajax)</button>	
 			</form>
 			
 			<BR /><BR />
-			<div id="result"></div>
+			<div id="result"> </div>
 	</FIELDSET>
 	
 </body>
